# config-model

./: README.md  pyproject.toml
server_config_model/: __init__.py  default_models.py
server_config_model/config/: __init__.py
