[tool.poetry]
name = "server-config-model"
version = "v0.1-beta"
description = ""
authors = ["zzanggu-SW <gyeongmin951@aiofarm.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
